--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: go
-script: go test -v ./...
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
